# Progetto-LASD

Exercise0A/: CMakeLists.txt  main.c  utility.c  utility.h
Exercise0A/Altri file/: build.sh
Exercise0A/queue/: queue.c  queue.h
Exercise0A/stack/: stack.c  stack.h
Exercise0B/: CMakeLists.txt  build.sh  main.c
Exercise0B/Altri file/: build.sh
Exercise0B/adt/: adt.c  adt.h
Exercise0B/adt/flt/: adtflt.c
Exercise0B/adt/int/: adtint.c  adtint.h
Exercise0B/adt/rec/: adtrec.c
Exercise0B/queue/: queue.c  queue.h
Exercise0B/stack/: stack.c  stack.h
Exercise1/: CMakeLists.txt  main.c  test.c  test.h  utility.c
Exercise1/adt/: adt.c  adt.h
Exercise1/queue/: queue.c  queue.h
Exercise1/stack/: stack.c  stack.h
Exercise2/: CMakeLists.txt  main.c  test.c  test.h  testBST.c  testBST.h  utility.h
Exercise2/adt/: adt.c  adt.h
Exercise2/adt/flt/: adtflt.h
Exercise2/adt/ptr/: adtptr.c  adtptr.h
Exercise2/adt/rec/: adtrec.c
Exercise2/adt/str/: adtstr.c  adtstr.h
Exercise2/bst/: bst.c  bst.h  bstitrbreadth.c  bstitrbreadth.h  bstitrinord.c  bstitrinord.h  bstitrpostord.c  bstitrpostord.h  bstitrpreord.c  bstitrpreord.h
Exercise2/bst/itr/: bstitr.c  bstitr.h
Exercise2/bst/rec/: bstrec.c  bstrec.h
Exercise2/itr/: itr.c  itr.h
Exercise2/queue/: queue.h
Exercise2/queue/vec/: queuevec.c  queuevec.h
Exercise2/stack/: stack.c  stack.h
Exercise2/stack/lst/: stacklst.h
Exercise2/stack/vec/: stackvec.h
Exercise3/: CMakeLists.txt  build.sh  main.c  testADT.c  testADT.h  testBST.c  testBST.h  testGraph.c  testGraph.h
Exercise3/adt/: adt.c  adt.h
Exercise3/bst/: bst.c  bst.h  bstitrbreadth.c  bstitrbreadth.h  bstitrinord.c  bstitrinord.h  bstitrpostord.c  bstitrpostord.h  bstitrpreord.c  bstitrpreord.h
Exercise3/graph/: graph.c  graph.h  graphitrbreadth.c  graphitrbreadth.h  graphitrpostord.c  graphitrpostord.h  graphitrpreord.c  graphitrpreord.h  graphitrvertex.c  graphitrvertex.h
Exercise3/itr/: itr.c  itr.h
Exercise3/queue/: queue.c  queue.h
Exercise3/stack/: stack.c  stack.h
(+54 files in other folders)
